menyesuikan ulang routenya dan relasinya
